<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_700"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/calculator"
        android:textColor="@color/purple_200"
        android:layout_marginTop="40dp"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sentence"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/enter"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:gravity="bottom|right"
        android:textColor="@color/purple_200"
        android:textStyle="italic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="25sp"
        android:gravity="bottom|right"
        android:textColor="@color/purple_200"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text=""
        android:textColor="@color/teal_700"
        android:textSize="50sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@string/width_button"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@string/height_button">

                <Button
                    android:id="@+id/but1"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="1"
                    android:textSize="@string/text_size_button" />

                <Button
                    android:id="@+id/but2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="2"
                    android:textSize="@string/text_size_button" />

                <Button
                    android:id="@+id/but3"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="3"
                    android:textSize="@string/text_size_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@string/height_button">

                <Button
                    android:id="@+id/but4"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="4"
                    android:textSize="@string/text_size_button" />

                <Button
                    android:id="@+id/but5"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="5"
                    android:textSize="@string/text_size_button" />

                <Button
                    android:id="@+id/but6"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="6"
                    android:textSize="@string/text_size_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@string/height_button">

                <Button
                    android:id="@+id/but7"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="7"
                    android:textSize="@string/text_size_button" />

                <Button
                    android:id="@+id/but8"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="8"
                    android:textSize="@string/text_size_button" />

                <Button
                    android:id="@+id/but9"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="9"
                    android:textSize="@string/text_size_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@string/height_button">

                <Button
                    android:id="@+id/butplus"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="+"
                    android:textSize="@string/text_size_button" />

                <Button
                    android:id="@+id/but0"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="0"
                    android:textSize="@string/text_size_button" />

                <Button
                    android:id="@+id/butminus"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@string/margin_button"
                    android:text="-"
                    android:textSize="@string/text_size_button" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/butC"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:text="C"
                android:layout_marginHorizontal="7dp"
                android:textSize="@string/text_size_button"
                />
            <Button
                android:id="@+id/but1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:text="="
                android:layout_marginHorizontal="7dp"
                android:textSize="@string/text_size_button"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>